# hmrc-rates

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DESIGN.md  README.md  build.rs
.github/workflows/: publish.yaml  pypi.yaml  python.yaml  rust.yaml  test.yaml  update-rates.yaml
data/: exrates-monthly-0116.xml  exrates-monthly-0118.xml  exrates-monthly-0122.xml  exrates-monthly-0124.xml  exrates-monthly-0125.xml  exrates-monthly-0222.xml  exrates-monthly-0316.xml  exrates-monthly-0317.xml  exrates-monthly-0321.xml  exrates-monthly-0324.xml  exrates-monthly-0415.xml  exrates-monthly-0419.xml  exrates-monthly-0421.xml  exrates-monthly-0515.xml  exrates-monthly-0516.xml  exrates-monthly-0517.xml  exrates-monthly-0518.xml  exrates-monthly-0521.xml  exrates-monthly-0522.xml  exrates-monthly-0524.xml  exrates-monthly-0615.xml  exrates-monthly-0616.xml  exrates-monthly-0617.xml  exrates-monthly-0619.xml  exrates-monthly-0622.xml  exrates-monthly-0623.xml  exrates-monthly-0625.xml  exrates-monthly-0715.xml  exrates-monthly-0716.xml  exrates-monthly-0717.xml  exrates-monthly-0723.xml  exrates-monthly-0724.xml  exrates-monthly-0815.xml  exrates-monthly-0822.xml  exrates-monthly-0823.xml  exrates-monthly-0920.xml  exrates-monthly-1016.xml  exrates-monthly-1018.xml  exrates-monthly-1021.xml  exrates-monthly-1022.xml  (+7 more)
data/average/: 2010-12.csv  2011-03.csv  2011-12.csv  2012-03.csv  2012-12.csv  2013-03.csv  2013-12.csv  2014-03.csv  2014-12.csv  2015-03.csv  2015-12.csv  2016-03.csv  2016-12.csv  2017-03.csv  2017-12.csv  2018-03.csv  2018-12.csv  2019-03.csv  2019-12.csv  2020-03.csv  2020-12.csv  2021-03.csv  2021-12.csv  2022-03.csv  2022-12.csv  2023-03.csv  2023-12.csv  2024-03.csv  2024-12.csv  2025-03.csv  2025-12.csv  2026-03.csv
data/monthly/: 2014-02.xml  2014-03.xml  2014-04.xml  2014-05.xml  2014-06.xml  2014-07.xml  2014-08.xml  2014-09.xml  2014-10.xml  2014-11.xml  2014-12.xml  2015-01.xml  2015-02.xml  2015-03.xml  2015-09.xml  2015-10.xml  2015-12.xml  2016-02.xml  2016-04.xml  2016-08.xml  2016-09.xml  2016-11.xml  2017-01.xml  2017-02.xml  2017-04.xml  2017-08.xml  2017-09.xml  2017-10.xml  2017-12.xml  2018-02.xml  2018-03.xml  2018-04.xml  2018-06.xml  2018-07.xml  2018-08.xml  2018-09.xml  2018-11.xml  2018-12.xml  2019-01.xml  2019-02.xml  (+63 more)
data/spot/: 2010-12.csv  2011-03.csv  2011-12.csv  2012-03.csv  2012-12.csv  2013-03.csv  2013-12.csv  2014-03.csv  2014-12.csv  2015-03.csv  2015-12.csv  2016-03.csv  2016-12.csv  2017-03.csv  2017-12.csv  2018-03.csv  2018-12.csv  2019-03.csv  2019-12.csv  2020-03.csv  2020-12.csv  2021-03.csv  2021-12.csv  2022-03.csv  2022-12.csv  2023-03.csv  2023-12.csv  2024-03.csv  2024-12.csv  2025-03.csv  2025-12.csv  2026-03.csv
data/weekly/: amendments.csv
docs/: data-sources.md
examples/: convert.rs  fresh.rs
python/: Cargo.toml  README.md  hmrc_rates.pyi  pyproject.toml
python/src/: lib.rs
python/tests/: test_errors.py  test_rates.py  test_types.py  test_updater.py
scripts/: backfill_archive.py  update_rates.py
src/: bundled.rs  date.rs  error.rs  http.rs  lib.rs  parse.rs  rate.rs  rates.rs  store.rs  types.rs
tests/: bundled.rs  http.rs  serde.rs
