[package]
name = "hmrc-rates"
version = "0.1.0"
edition = "2024"
description = "A Rust library for converting currencies to GBP using HMRC monthly exchange rates."
license = "MIT"
homepage = "https://github.com/velikodniy/hmrc-rates"
repository = "https://github.com/velikodniy/hmrc-rates"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.23"
xml-rs = "0.8"
thiserror = "2.0.12"
include_dir = { version = "0.7", features = ["glob"] }

[dev-dependencies]
rust_decimal_macros = "1.23"
