[package]
name = "hmrc-rates"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "HMRC exchange rates (monthly, spot, yearly average, weekly) with bundled history and GBP conversion."
license = "MIT"
homepage = "https://github.com/velikodniy/hmrc-rates"
repository = "https://github.com/velikodniy/hmrc-rates"
keywords = ["hmrc", "exchange-rate", "currency", "gbp", "tax"]
categories = ["finance", "internationalization"]
include = ["src/**", "data/**", "build.rs", "docs/**", "README.md", "LICENSE"]

[features]
default = ["std", "bundled"]
std = []
bundled = []
http = ["std", "bundled", "dep:ureq", "dep:etcetera", "dep:quick-xml", "dep:csv", "chrono/clock"]
serde = ["dep:serde", "rust_decimal/serde"]
cli = ["http", "dep:clap"]

[dependencies]
chrono = { version = "0.4", default-features = false }
rust_decimal = { version = "1.36", default-features = false }
thiserror = { version = "2", default-features = false }
ureq = { version = "3", optional = true }
etcetera = { version = "0.8", optional = true }
quick-xml = { version = "0.37", optional = true }
csv = { version = "1.3", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[build-dependencies]
quick-xml = "0.37"
csv = "1.3"

[dev-dependencies]
quick-xml = "0.37"
csv = "1.3"
rust_decimal_macros = "1.36"
httpmock = "0.7"
tempfile = "3"

[[bin]]
name = "hmrc-rates"
path = "src/bin/hmrc-rates.rs"
required-features = ["cli"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
