[workspace]
members = ["python"]

[workspace.package]
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
homepage = "https://github.com/velikodniy/hmrc-rates"
repository = "https://github.com/velikodniy/hmrc-rates"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false }
rust_decimal = { version = "1.36", default-features = false }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[package]
name = "hmrc-rates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HMRC exchange rates (monthly, spot, yearly average, weekly) with bundled history and GBP conversion."
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["hmrc", "exchange-rate", "currency", "gbp", "tax"]
categories = ["finance", "internationalization"]
include = ["src/**", "data/**", "examples/**", "build.rs", "docs/**", "README.md", "LICENSE"]

[features]
default = ["std", "bundled"]
std = []
bundled = []
http = ["std", "bundled", "dep:ureq", "dep:etcetera", "dep:quick-xml", "dep:csv", "chrono/clock"]
serde = ["dep:serde", "rust_decimal/serde", "chrono/serde"]
cli = ["http", "dep:clap"]

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { version = "2", default-features = false }
ureq = { version = "3", optional = true }
etcetera = { version = "0.8", optional = true }
quick-xml = { version = "0.37", optional = true }
csv = { version = "1.3", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[build-dependencies]
quick-xml = "0.37"
csv = "1.3"

[dev-dependencies]
quick-xml = "0.37"
csv = "1.3"
rust_decimal_macros = "1.36"
httpmock = "0.7"
tempfile = "3"
serde_json = "1"

[[bin]]
name = "hmrc-rates"
path = "src/bin/hmrc-rates.rs"
required-features = ["cli"]

[lints]
workspace = true

[[example]]
name = "fresh"
required-features = ["http"]
