[package]
name = "hmrc-rates-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings for hmrc-rates: HMRC exchange rates with exact GBP conversion"
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[lib]
# Not "hmrc_rates": that would shadow the dependency crate in Rust paths.
# The Python module name is set by #[pymodule(name)] and [tool.maturin].
name = "hmrc_rates_py"
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
hmrc-rates = { path = "..", features = ["http"] }
pyo3 = { version = "0.29", features = ["abi3-py310", "chrono", "rust_decimal"] }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[lints]
workspace = true
